--- a/femida-admin/backend/requirements.txt
+++ b/femida-admin/backend/requirements.txt
@@ -1,7 +1,7 @@
 Django>=5.2.3
 psycopg2-binary
 drf-yasg
-phonenumber_field
+phonenumber-field
 djangorestframework
 corsheaders
 djangorestframework-simplejwt
