Fix: requirements.txt

--- a/femida-admin/backend/requirements.txt
+++ b/femida-admin/backend/requirements.txt
@@ -5,4 +5,5 @@ django-phonenumber-field
 djangorestframework
 django-cors-headers
 djangorestframework-simplejwt
-django-jazzmin 
+django-jazzmin
+phonenumbers 
