--- a/femida-admin/frontend/package.json
+++ b/femida-admin/frontend/package.json
@@ -12,9 +12,11 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "i18next": "^25.2.1",
-    "next": "15.3.4",
+    "next": "^15.3.4",
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
@@ -24,8 +26,9 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/react-i18next": "^7.8.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
