--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
     "i18next": "^25.2.1",
     "next": "^15.3.4",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.10.2",
     "recharts": "^3.0.2"
   },
   "devDependencies": {
