--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
@@ -17,6 +18,7 @@
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.3",
