--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
     "i18next": "^25.2.1",
+    "js-cookie": "^3.0.5",
     "next": "^15.3.4",
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
