--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-SECRET_KEY=783c9wqt%v1u5s!0%&q-3zeihq6m3b$-eb_^$rry)qka01bnxc
-ALLOWED_HOSTS=localhost,127.0.0.1, femida.kg
-POSTGRES_DB=femida
-POSTGRES_USER=femida
+SECRET_KEY=a$mf$b8z(ce@pc@l5-a+sxg1@t$u=*j!r*^+te8buvj$y)j=19
+ALLOWED_HOSTS=localhost,127.0.0.1, femida.kg, hoster.kg
+POSTGRES_DB=femida_prod
+POSTGRES_USER=femida-admin
 POSTGRES_PASSWORD=femida
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
